--- a/Server_One/Server/Server.csproj
+++ b/Server_One/Server/Server.csproj
@@ -59,7 +59,8 @@
     <Compile Include="DataBase.cs" />
     <Compile Include="IMessageCallback.cs" />
     <Compile Include="IServer.cs" />
-    <Compile Include="MessageDb.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
   </ItemGroup>
