--- a/Server_One/Server/app.config
+++ b/Server_One/Server/app.config
@@ -13,6 +13,12 @@
     providerName="System.Data.SqlClient"/>
 
 
+  <add name="DbConnectionString1"
+  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Messages1.mdf;Initial Catalog=Messages1;Integrated Security=True"
+  providerName="System.Data.SqlClient"/>
+
+
+
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
