Добавлен базу абонент

--- a/Server_One/Server/app.config
+++ b/Server_One/Server/app.config
@@ -8,13 +8,13 @@
   </configSections>
 
 
-  <add name="DbConnectionString"
-    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Messages.mdf;Initial Catalog=Messages;Integrated Security=True"
+  <add name="ConnectionStringToDbOfMsg"
+    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MessageDb.mdf;Initial Catalog=MessageDb;Integrated Security=True"
     providerName="System.Data.SqlClient"/>
 
 
-  <add name="DbConnectionString1"
-  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Messages1.mdf;Initial Catalog=Messages1;Integrated Security=True"
+  <add name="ConnectionStringToDbOfAbonents"
+  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AbonentDb.mdf;Initial Catalog=Db;Integrated Security=True"
   providerName="System.Data.SqlClient"/>
 
 
